--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.3.0",
     "@heroicons/vue": "^1.0.1",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
